--- a/asys/app/views/main.html
+++ b/asys/app/views/main.html
@@ -29,7 +29,12 @@
 
 		
 		</style>
-	
+	<script type="text/javascript">
+	function vernombre(tas){
+		var val=tas.value;
+		alert(val);
+	}
+	</script>
 		<script type="text/javascript" charset="${_response_encoding}">
 		    // Rebuild state
 		    $(document).ready(function(){
@@ -120,10 +125,6 @@
 						</nav>
 
 				</div>
-<h1>Hola mundo</h1>
-<h1>Esta es la 4 prueba</h1>
-<h1>Esta es la 5 prueba</h1>
-<h1>Esta es la 6 prueba</h1>
 				<!-- Hero -->
 					<section id="hero" class="container">
 						<header>
